--- a/src/components/body-box/body-box.scss
+++ b/src/components/body-box/body-box.scss
@@ -1,6 +1,11 @@
 :host {
   display: block;
 }
+body {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 .main_box {
   height: 100vh;
   display: flex;
@@ -11,6 +16,7 @@
 .img_box {
   background-image: url('assets/acme-business.jpeg');
   background-size: cover;
+  background-position: center;
   width: 100%;
   height: 350px;
   display: flex;
@@ -65,12 +71,16 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 .card {
   width: 300px;
-  height: 350px;
-  border: 1px solid grey;
+  height: auto;
+  padding-bottom: 20px;
   border-radius: 20px;
+  border: 0.5px solid #C4C4C4;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .card_img {
   display: flex;
@@ -110,6 +120,7 @@
   padding-bottom: 10px;
   padding-left: 20px;
   padding-right: 20px;
+  margin-top: 20px;
   font-size: 25px;
   cursor: pointer;
 }
@@ -148,4 +159,46 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media(max-width:1000px){
+  .card1 {
+    flex-grow: 3;
+    display: flex;
+    width: 100%;
+    margin-bottom: 50px;
+    justify-content: center;
+    align-items: center;
+  }
+  .container_p_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .card p {
+    height: auto;
+    margin-top: 10px;
+  }
+}
+@media(max-width:900px){
+  .card1 {
+    display: block;
+    flex-grow: initial;
+    margin-bottom: 50px;
+  }
+  .card {
+    width: 300px;
+    margin-bottom: 50px;
+  }
+  .container_info h1 {
+    font-size: 25px;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  .container_info span {
+    font-size: 25px;
+  }
+  .container_info h2 {
+    font-size: 20px;
+  }
 }
