--- a/src/components/acme-footer/acme-footer.scss
+++ b/src/components/acme-footer/acme-footer.scss
@@ -15,14 +15,22 @@
     padding-top: 20px;
     padding-bottom: 20px;
 
-    &--icon {
-      display: grid;
-      grid-template-rows: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr ;
+    &--icons {
+      .logo-acme {
+        //background-color: #fff;
+        margin-left: 60px;
+
+        img {
+          width: 100px;
+          height: 100px;
+        }
+      }
     }
     img {
-      width: 50px;
-      height: 50px;
+      
+      width: 30px;
+      height: 30px;
+      padding: 5px;
     }
    }
    
