Update font-size max-width 320px

--- a/src/components/body-box2/body-box2.scss
+++ b/src/components/body-box2/body-box2.scss
@@ -193,3 +193,18 @@ body {
     font-size: 20px;
   }
 }
+
+@media(max-width:320px){
+  .container_info h1 {
+    font-size: 21px;
+  }
+  .container_info span {
+    font-size: 21px;
+  }
+  .container_info h2 {
+    font-size: 21px;
+  }
+  .container_button {
+    font-size: 21px;
+  }
+}
