--- a/src/components/body-box/body-box.scss
+++ b/src/components/body-box/body-box.scss
@@ -202,3 +202,17 @@ body {
     font-size: 20px;
   }
 }
+@media(max-width:320px){
+  .container_info h1 {
+    font-size: 19px;
+  }
+  .container_info span {
+    font-size: 19px;
+  }
+  .container_info h2 {
+    font-size: 19px;
+  }
+  .container_button {
+    font-size: 19px;
+  }
+}
