--- a/src/components/upper-bar/upper-bar.scss
+++ b/src/components/upper-bar/upper-bar.scss
@@ -22,5 +22,11 @@ a {
   text-decoration: none;
 }
 img {
-  max-width: 20px;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  margin-top: 2px;
+}
+.flex {
+  display: flex;
 }
