--- a/src/components/acme-form/acme-form.scss
+++ b/src/components/acme-form/acme-form.scss
@@ -1,28 +1,117 @@
-.big_container {
-  font-family: 'Poppins';
-  color: #fff;
-  display: flex;
-  margin-left: 75px;
-  margin-right: 75px;
-  height: 350px;
+.wrapper {
+  // border: 1px solid #000000;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+   background-color: $primary-color;
+   //margin-left: 75px;
+   //margin-right: 75px;
+   font-family: $font-primary;
+}
+
+.wrapper>* {
+   padding: 25px 60px;
 }
 
 .img_background {
   background-image: url('assets/acme-building-1.jpeg');
   background-size: cover;
   background-position: center;
-  width: 50%;
+  width: 100%;
+  height: auto;
   
 }
 
 h4 {
-  font-size: 24px;
+  font-size: 28px;
+  text-align: center;
+  color: $secondary-color;
+  padding-bottom: 20px;
 }
 
-.container {
-  padding-top: 20px;
-  text-align: center;
-  background-color: $primary-color;
-  width: 50%;
+form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 40px;
+
+  &__p {
+    margin: 0;
+    line-height: 1;
+  }
+
+  &__label {
+    display: block;
+  }
+}
+
+.full-width {
+    grid-column: 1 / -1;
+}
+
+input {
+    width: 100%;
+    background-color: $primary-color;
+    border: 0;
+    border-bottom: 2px solid #fff;
+    color: #fff;
+
+    &::placeholder {
+      color: $secondary-color;
+    }
+
+    &:focus {
+      background-color: rgba(236, 236, 233, 0.2);
+      border-bottom: 2px solid $secondary-color;
+      outline: 0;
+  }
+}
+
+textarea {
+  font-family: $font-primary;
+    width: 100%;
+    height: 120px;
+    border: 2px solid #fff;
+    border-radius: 15px;
+
+  &:focus {
+    outline: 0;
+  }
+}
+
+button {
+    background-color: $secondary-color;
+    color: #fff;
+    border-radius: 100px;
+    cursor: pointer;
+    width: 120px;
+    text-align: center;
+    padding: .5rem;
+    border: 0;
+    transition: all .2s;
+
+    &:hover {
+      opacity: .8;;
+    }
+    &:hover,
+    &:focus {
+    outline: 0;
+  }
+}
+
+input,
+textarea {
+    padding: .2rem;
+    text-align: center;
+}
+
+@media (max-width: 700px) {
+  .wrapper {
+      grid-template-columns: 1fr ;
+      margin-left: 0;
+      margin-right: 0;
+  }
+
+  .img_background {
+    display: none;
+  }
 }
 
