--- a/src/components/acme-form/acme-form.scss
+++ b/src/components/acme-form/acme-form.scss
@@ -3,8 +3,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
    background-color: $primary-color;
-   //margin-left: 75px;
-   //margin-right: 75px;
+   margin-left: 75px;
+   margin-right: 75px;
    font-family: $font-primary;
 }
 
@@ -100,7 +100,7 @@ button {
 input,
 textarea {
     padding: .2rem;
-    text-align: center;
+    text-align: left;
 }
 
 @media (max-width: 700px) {
