--- a/src/components/acme-banner/acme-banner.scss
+++ b/src/components/acme-banner/acme-banner.scss
@@ -5,7 +5,7 @@
   background-size: cover;
 }
 .promotional_text {
-  font-family: $primary-font;
+  font-family: $font-primary;
   color: white;
   padding-top: 70px;
   padding-left: 80px;
