--- a/src/components/lower-bar/lower-bar.scss
+++ b/src/components/lower-bar/lower-bar.scss
@@ -1,7 +1,7 @@
 .lower {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  font-family: $primary-font;
+  font-family: $font-primary;
   font-size: 20px;
   height: 14vh;
 }
