--- a/src/components/upper-bar/upper-bar.scss
+++ b/src/components/upper-bar/upper-bar.scss
@@ -3,7 +3,7 @@
   color: white;
   display: grid;
   grid-template-columns: 1fr 3fr;;
-  font-family: $primary-font;
+  font-family: $font-primary;
   padding: 12px 100px;
   height: 8vh;
 }
