--- a/src/components/acme-form/acme-form.scss
+++ b/src/components/acme-form/acme-form.scss
@@ -13,7 +13,7 @@
 }
 
 .img_background {
-  background-image: url('assets/acme-building-1.jpeg');
+  //background-image: url('assets/acme-building-1.jpeg');
   background-size: cover;
   background-position: center;
   width: 100%;
