--- a/src/components/body-box2/body-box2.scss
+++ b/src/components/body-box2/body-box2.scss
@@ -150,7 +150,6 @@ body {
   align-items: center;
 }
 @media(max-width:1000px){
-
   .card1 {
     display: flex;
     width: 100%;
@@ -169,8 +168,14 @@ body {
     height: auto;
     margin-top: 10px;
   }
+  .main_box {
+    margin-top: 100px;
+  }
 }
 @media(max-width:630px){
+  .main_box {
+    margin-top: 900px;
+  }
   .card1 {
     display: block;
     flex-grow: initial;
