--- a/src/components/text-box/text-box.scss
+++ b/src/components/text-box/text-box.scss
@@ -67,3 +67,10 @@ a {
     width: auto;
   }
 }
+
+@media(max-width:630px) {
+  .box_container {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
