--- a/src/components/body-box/body-box.scss
+++ b/src/components/body-box/body-box.scss
@@ -167,16 +167,23 @@ body {
     margin-bottom: 50px;
     justify-content: center;
     align-items: center;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  div.container_p_button p {
+    margin-left: 30px;
   }
   .container_p_button {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-right: 10px;
   }
   .card p {
     height: auto;
     margin-top: 10px;
+    margin-left: 20px;
   }
 }
 @media(max-width:630px){
