--- a/src/components/faq-accordion/faq-accordion.scss
+++ b/src/components/faq-accordion/faq-accordion.scss
@@ -4,10 +4,10 @@
 
 .accordion {
   cursor: pointer;
-  margin-top: 30px;
+  margin-top: 10px;
   padding: 10px;
   text-align: left;
-  font-size: 1.2rem;
+  font-size: 16px;
   font-weight: bold;
   outline: 0;
   border: none;
@@ -19,16 +19,18 @@
 
 span {
   float: right;
+  font-size: 27px;
 }
 
 .open {
-  height: 80px;
+  height: auto;
+  padding: 20px;
   text-align: left;
-  transition: .3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  transition: .1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
 .close {
   opacity: 0;
   height: 5px;
-  transition: .3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  transition: .1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
