aggiunto contenuto faq + media query

--- a/src/components/faq-wrap/faq-wrap.scss
+++ b/src/components/faq-wrap/faq-wrap.scss
@@ -3,4 +3,9 @@ div {
   justify-content: space-around;
   margin: 70px 75px;
   font-family: $font-primary;
+
+  @media(max-width:1000px){
+    flex-direction: column;
+   }
 }
+
