aggiunto logo colorato

--- a/src/components/acme-footer/acme-footer.scss
+++ b/src/components/acme-footer/acme-footer.scss
@@ -1,6 +1,7 @@
 .footer{ 
   font-family: $font-primary;
-  margin-top: 40px;
+  margin-top: 50px;
+  margin-bottom: 50px;
    text-align: center;
    width: 100%;
    display: grid;
@@ -16,14 +17,13 @@
 
     &--icons {
       cursor: pointer;
-
+      
       .logo-acme {
         margin-left: 25px;
 
         img {        
           width: 100%;
           height: 50px;
-          
         }
       }
     }
