aggiornato con nuove icone

--- a/src/components/acme-footer/acme-footer.scss
+++ b/src/components/acme-footer/acme-footer.scss
@@ -30,8 +30,8 @@
     .cont-social {
       padding-top: 20px;
       img { 
-        width: 40px;
-        height: auto;
+        width: 45px;
+        height: 45px;
         padding: 8px;
       }
     }
