--- a/src/components/faq-accordion/faq-accordion.scss
+++ b/src/components/faq-accordion/faq-accordion.scss
@@ -15,6 +15,11 @@
   border-bottom: 1px solid #b9b7b7;
   
   transform: translateY(-10px);
+
+  @media(max-width:1000px){
+    margin-top: 25px;
+    text-align: center;
+   }
 }
 
 span {
@@ -35,3 +40,5 @@ span {
   height: 5px;
   transition: .1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
+
+
