--- a/src/components/acme-form/acme-form.scss
+++ b/src/components/acme-form/acme-form.scss
@@ -116,7 +116,7 @@ textarea {
       grid-template-columns: 1fr ;
       margin-left: 0;
       margin-right: 0;
-      margin-top: 750px;
+      margin-top: 100px;
   }
 
   .img_background {
@@ -126,7 +126,7 @@ textarea {
 
 @media(max-width:630px){
   .wrapper {
-    margin-top: 1300px;
+    margin-top: 100px
   }
 }
 
