--- a/src/components/acme-banner/acme-banner.scss
+++ b/src/components/acme-banner/acme-banner.scss
@@ -1,3 +1,6 @@
+button:focus {
+  outline: none;
+}
 .banner {
   width: 100%;
   height: 100vh;
@@ -37,6 +40,13 @@ button {
   border-radius: 53px;
   width: 200px;
 }
+
+
+
+
+
+
+
 @media (max-width: 820px) {
   .promotional_text {
     padding-top: 100px;
@@ -47,7 +57,6 @@ button {
     display: none;
   }
   button {
-    margin-left: 100px;
     margin-top: 50px;
   }
 }
@@ -68,16 +77,26 @@ button {
     font-size: 35px;
   }
 }
+
+@media(max-width:1500px) {
+  .promotional_text {
+    padding: 60px;
+    padding-top: 100px;
+  }
+  button {
+    margin-top: 50px;
+  }
+}
 @media (min-width: 1500px) {
   .promotional_text {
     padding: 60px;
     padding-top: 150px;
   }
   .primary_text {
-    font-size: 60px;
+    font-size: 50px;
   }
   .secondary_text {
-    font-size: 40px;
+    font-size: 30px;
   }
   button {
     margin-left: 300px;
