--- a/src/components/acme-news/acme-news.scss
+++ b/src/components/acme-news/acme-news.scss
@@ -3,6 +3,16 @@ button {
   text-align: center;
   left: 50%;
   width: 100px;
+
+  color: white;
+  font-family: $font-primary;
+  padding: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  background: $primary-color;
+  border-radius: 20px;
+  width: 150px;
+  margin: 20px 0;
 }
 
 .post {
