--- a/src/components/acme-news/acme-news.scss
+++ b/src/components/acme-news/acme-news.scss
@@ -80,7 +80,7 @@ button.fetch-button {
   
   h3.post-title {
     font-size: 21px;
-    text-align: center;
+    text-align: left;
     margin: 0;
 
     @media(max-width:768px){
