--- a/src/components/acme-form/acme-form.scss
+++ b/src/components/acme-form/acme-form.scss
@@ -3,9 +3,14 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   background-color: $primary-color;
-  margin:150px 75px;
-  font-family: $font-primary;
-  
+  margin:150px 75px 100px 75px;
+  font-family: $font-primary; 
+}
+
+@media (max-width: 500px){
+  .wrapper {
+    margin:150px 75px 50px 75px;
+  } 
 }
 
 .wrapper>* {
