--- a/src/components/acme-form/acme-form.scss
+++ b/src/components/acme-form/acme-form.scss
@@ -129,9 +129,7 @@ textarea {
 @media (max-width: 1000px) {
   .wrapper {
       grid-template-columns: 1fr ;
-      margin-left: 0;
-      margin-right: 0;
-      margin-top: 100px;
+      margin: 100px 0 5px 0;
   }
 
   .img_background {
