Update card fix

--- a/src/components/acme-news/acme-news.scss
+++ b/src/components/acme-news/acme-news.scss
@@ -42,6 +42,7 @@ button.fetch-button {
   border-radius: 20px;
   width: 150px;
   margin-top: 25px;
+  outline: none;
 
   &:hover {
     opacity: .9;
