--- a/src/components/body-box2/body-box2.scss
+++ b/src/components/body-box2/body-box2.scss
@@ -97,13 +97,13 @@ button:hover {
   margin-bottom: 10px;
 }
 .card h3 {
-  margin-left: 50px;
+  margin-left: 40px;
   font-family: $font-primary;
   color: $primary-color;
   font-size: 20px;
 }
 .card p {
-  margin-left: 50px;
+  margin-left: 40px;
   font-family: $font-primary;
   height: 125px;
 }
@@ -112,13 +112,13 @@ button:hover {
   font-family: $font-primary;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 16px;
   cursor: pointer;
   background: $primary-color;
   border-radius: 53px;
-  width: 200px;
+  width: 150px;
   margin-top: 20px;
 }
 .card img {
@@ -178,16 +178,17 @@ button:hover {
     flex-direction: column;
     margin-right: 10px;
   }
+  .card_button {
+    margin-top: 30px;
+  }
   .card p {
     height: auto;
     margin-top: 10px;
     margin-left: 20px;
+    margin-right: 20px;
   }
 }
 @media(max-width:600px){
-  .img_box {
-    margin-top: 0px;
-  }
   .card1 {
     display: block;
     flex-grow: initial;
@@ -198,6 +199,18 @@ button:hover {
   .card {
     width: 350px;
     margin-bottom: 50px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .card_img {
+    margin: 0px;
+    margin-bottom: 20px;
+  }
+  .card h3 {
+    margin: 0px;
   }
   .container_info h1 {
     font-size: 25px;
