--- a/src/components/acme-footer/acme-footer.scss
+++ b/src/components/acme-footer/acme-footer.scss
@@ -45,7 +45,8 @@
      
     li {
       cursor: pointer;
-      font-size: 13px;
+      padding-top: 5px;
+      font-size: 14px;
       list-style: none;
       transition: all .4s;
 
