--- a/src/components/acme-news/acme-news.scss
+++ b/src/components/acme-news/acme-news.scss
@@ -33,7 +33,7 @@ button.fetch-button {
   width: 100px;
   color: white;
   font-family: $font-primary;
-  padding: 5px;
+  padding: 10px 5px;
   font-size: 16px;
   cursor: pointer;
   background: $primary-color;
@@ -41,7 +41,7 @@ button.fetch-button {
   width: 150px;
   margin-top: 25px;
   outline: none;
-  transform: translateX(-48%);
+  transform: translateX(-46%);
   text-align: center;
 
   
