--- a/src/components/acme-news/acme-news.scss
+++ b/src/components/acme-news/acme-news.scss
@@ -87,6 +87,7 @@ button.fetch-button {
     font-size: 21px;
     text-align: left;
     margin: 0;
+    color: $secondary-color;
 
     @media(max-width:768px){
       font-size: 18px;
