--- a/src/components/body-box2/body-box2.scss
+++ b/src/components/body-box2/body-box2.scss
@@ -126,7 +126,7 @@ button:hover {
   height: 80px;
 }
 .img_sfondo1 {
-  background-color: #B4DEF0;
+  background-color: #f8e993;
   border-radius: 100px;
   width: 110px;
   height: 110px;
