--- a/src/components/body-box2/body-box2.scss
+++ b/src/components/body-box2/body-box2.scss
@@ -87,7 +87,7 @@ button:hover {
   padding-bottom: 20px;
   border-radius: 20px;
   box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.20);
 }
 .card_img {
   display: flex;
