--- a/src/components/body-box2/body-box2.scss
+++ b/src/components/body-box2/body-box2.scss
@@ -106,6 +106,7 @@ button:hover {
   margin-left: 40px;
   font-family: $font-primary;
   height: 125px;
+  margin-right: 20px;
 }
 .card_button {
   color: white;
