--- a/src/components/text-box/text-box.scss
+++ b/src/components/text-box/text-box.scss
@@ -40,7 +40,10 @@ a {
 }
 .info_box {
   width: 200px;
+  height: 100px;
   margin-bottom: 50px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 @media(max-width:1200px){
