--- a/src/components/upper-bar/upper-bar.scss
+++ b/src/components/upper-bar/upper-bar.scss
@@ -36,11 +36,16 @@ img {
     padding: 12px 50px;
   }
 }
-@media (max-width: 820px) {
-  .upper {
+@media (max-width: 960px) {
+  input, .loupe {
     display: none;
   }
 }
+@media (max-width: 700px) {
+  .upper {
+    display: none;
+  }
+} 
 @media (min-width: 1500px) {
   .upper div p, h1 {
    font-size: 20px;
